# wakate54_pdf_extraction

./: README.md  pyproject.toml  requirements.txt
notebooks/: demonstration.ipynb
