[tool.poetry]
name = "wakate54_pdf_extraction"
version = "0.1.0"
description = ""
authors = ["nersonu <nersonu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
PyMuPDF = "^1.18.19"
Pillow = "^8.3.2"
matplotlib = "^3.4.3"
pandas = "^1.3.3"
camelot-py = {extras = ["base"], version = "^0.10.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
